--- a/src/supcheck/ui/addedNames.ui
+++ b/src/supcheck/ui/addedNames.ui
@@ -7,11 +7,11 @@
     <x>0</x>
     <y>0</y>
     <width>644</width>
-    <height>960</height>
+    <height>750</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Added Names Report</string>
+   <string>SupCheck</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
